--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-appsync": "^1.71.0",
+    "@aws-cdk/aws-cloudwatch": "^1.71.0",
+    "@aws-cdk/aws-cognito": "^1.71.0",
+    "@aws-cdk/aws-dynamodb": "^1.71.0",
+    "@aws-cdk/aws-lambda": "^1.71.0",
+    "@aws-cdk/aws-logs": "^1.71.0",
+    "@aws-cdk/aws-wafv2": "^1.71.0",
     "@aws-cdk/core": "1.71.0",
     "source-map-support": "^0.5.16"
   }
